@@ -1,247 +1,80 @@
 package com.holybuckets.structures.core;
 
 import com.holybuckets.foundation.HBUtil;
-import com.holybuckets.foundation.model.ManagedChunk;
 import com.holybuckets.foundation.model.ManagedChunkUtility;
 import com.holybuckets.structures.LoggerProject;
+import com.holybuckets.structures.mixin.NoiseBasedChunkGeneratorInvoker;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Registry;
 import net.minecraft.core.SectionPos;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.protocol.game.ClientboundForgetLevelChunkPacket;
 import net.minecraft.network.protocol.game.ClientboundLevelChunkWithLightPacket;
+import net.minecraft.server.level.GenerationChunkHolder;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.server.level.ServerChunkCache;
 import net.minecraft.server.level.WorldGenRegion;
-import net.minecraft.world.Clearable;
+import net.minecraft.util.Mth;
+import net.minecraft.util.StaticCache2D;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.chunk.*;
-import net.minecraft.world.level.levelgen.GenerationStep;
-import net.minecraft.world.level.levelgen.Heightmap;
+import net.minecraft.world.level.chunk.status.ChunkStatus;
+import net.minecraft.world.level.chunk.status.ChunkPyramid;
+import net.minecraft.world.level.chunk.status.ChunkStep;
+import net.minecraft.world.level.levelgen.NoiseBasedChunkGenerator;
+import net.minecraft.world.level.levelgen.NoiseSettings;
 import net.minecraft.world.level.levelgen.RandomState;
 import net.minecraft.world.level.levelgen.blending.Blender;
 import net.minecraft.world.level.levelgen.structure.BoundingBox;
 import net.minecraft.world.level.levelgen.structure.Structure;
 import net.minecraft.world.level.levelgen.structure.StructureStart;
-import net.minecraft.world.phys.AABB;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
-/**
- * Regenerates pristine terrain for a chunk by replaying the worldgen pipeline
- * (BIOMES → NOISE → SURFACE → CARVERS) on a scratch ProtoChunk, then copying
- * the resulting block sections back into the live LevelChunk. Structures and
- * biome features (trees, ores) are intentionally omitted.
- */
+import net.minecraft.Util;
+import net.minecraft.server.MinecraftServer;
+import net.minecraft.server.level.progress.ChunkProgressListener;
+import net.minecraft.world.level.dimension.LevelStem;
+import net.minecraft.world.level.levelgen.WorldOptions;
+import net.minecraft.world.level.storage.LevelStorageSource;
+import net.minecraft.world.level.storage.PrimaryLevelData;
+import net.minecraft.world.RandomSequences;
+import java.nio.file.Files;
+import java.nio.file.Path;
+
+
+
 public class ChunkRegenerator {
 
     private static final String CLASS_ID = "012";
 
-    //Rebuilds chunk over specified area to reset terrain for the next structure
-    public static boolean resetTerrain(ProtoChunk protoChunk, ServerLevel level, ChunkPos pos, List<ChunkAccess> localChunks) {
-        ChunkGenerator generator = level.getChunkSource().getGenerator();
-        RandomState randomState = level.getChunkSource().randomState();
 
-        if (protoChunk == null) return false;
-
-        WorldGenRegion region = new WorldGenRegion(level, localChunks, ChunkStatus.FEATURES, 0);
-
-        try {
-
-            protoChunk.setStatus(ChunkStatus.STRUCTURE_STARTS);
-
-            protoChunk.setStatus(ChunkStatus.STRUCTURE_REFERENCES);
-
-            CompletableFuture<ChunkAccess> biomesFuture = generator.createBiomes(
-                level.getServer(), randomState, Blender.empty(),
-                level.structureManager().forWorldGenRegion(region), protoChunk
-            );
-            level.getServer().managedBlock(biomesFuture::isDone);
-            protoChunk.setStatus(ChunkStatus.BIOMES);
-
-            CompletableFuture<ChunkAccess> noiseFuture = generator.fillFromNoise(
-                level.getServer(), Blender.of(region), randomState,
-                level.structureManager().forWorldGenRegion(region), protoChunk
-            );
-            level.getServer().managedBlock(noiseFuture::isDone);
-            protoChunk.setStatus(ChunkStatus.NOISE);
-
-            generator.buildSurface(region, level.structureManager().forWorldGenRegion(region),
-                randomState, protoChunk);
-            protoChunk.setStatus(ChunkStatus.SURFACE);
-
-           /* generator.applyCarvers(region, level.getSeed(), randomState, level.getBiomeManager(),
-                level.structureManager().forWorldGenRegion(region), protoChunk,
-                GenerationStep.Carving.AIR); //removed for performance concerns
-            */
-            protoChunk.setStatus(ChunkStatus.CARVERS);
-
-            /*
-            if(applyDecoration) {
-                List<ChunkAccess> genChunks = new ArrayList<>(localChunks.size());
-                localChunks.forEach(c -> genChunks.add(createProtoChunk(level, c.getPos())));
-                region = new WorldGenRegion(level, genChunks, ChunkStatus.FEATURES, 1);
-                generator.applyBiomeDecoration(region, protoChunk, level.structureManager().forWorldGenRegion(region));
-            }
-            protoChunk.setStatus(ChunkStatus.FEATURES);
-             */
-
-
-        } catch (RuntimeException e) {
-            //catch and move on from carver runtime exceptions for OOB region check
-        }
-        catch (Exception e) {
-            e.getMessage();
-            e.printStackTrace();
-            throw new RuntimeException("Terrain regeneration failed at " + pos + ": " + e.getMessage(), e);
-        }
-
-
-        //LoggerProject.logDebug("012010", "Regenerated terrain for chunk " + pos);
-        return true;
-    }
-
-    /**
-     * Applies biome decoration (trees, flowers, grass, ores) to cached ProtoChunks.
-     * Builds a contiguous square WorldGenRegion from CHUNK_CACHE, filling gaps with
-     * live LevelChunks so the region grid is valid for WorldGenRegion's index math.
-     * Returns false if any chunk in the grid is not fully loaded.
-     */
-    public static boolean applyDecorationBatch(ServerLevel level, List<ChunkPos> chunksToDecorate,
-                                               Map<Structure, StructureStart> starts,
-                                               BoundingBox structureArea) {
-
-            if (chunksToDecorate.isEmpty() || CHUNK_CACHE.isEmpty()) return false;
-
-            ManagedChunkUtility util = ManagedChunkUtility.getInstance(level);
-            ChunkGenerator generator = level.getChunkSource().getGenerator();
-            if (util == null) return false;
-
-            int minX = Integer.MAX_VALUE, maxX = Integer.MIN_VALUE;
-            int minZ = Integer.MAX_VALUE, maxZ = Integer.MIN_VALUE;
-            for (ChunkPos cp : chunksToDecorate) {
-                minX = Math.min(minX, cp.x);
-                maxX = Math.max(maxX, cp.x);
-                minZ = Math.min(minZ, cp.z);
-                maxZ = Math.max(maxZ, cp.z);
-            }
-
-            // Pad by 5 on each side: decoration can write ~2 chunks out from center,
-            // plus 1 read-only border, plus safety margin for large features (trees)
-            int C = 3;
-            minX -= C;
-            maxX += C;
-            minZ -= C;
-            maxZ += C;
-
-            int sideX = maxX - minX + 1;
-            int sideZ = maxZ - minZ + 1;
-            int side = Math.max(sideX, sideZ);
-
-            // WorldGenRegion requires a square grid, make odd so center is clean
-            if (side % 2 == 0) side++;
-
-            // Re-center both axes to the square
-            int centerX = (minX + maxX) / 2;
-            int centerZ = (minZ + maxZ) / 2;
-            minX = centerX - side / 2;
-            maxX = centerX + side / 2;
-            minZ = centerZ - side / 2;
-            maxZ = centerZ + side / 2;
-
-            List<ChunkAccess> regionChunks = new ArrayList<>(side * side);
-            for (int z = minZ; z <= maxZ; z++) {
-                for (int x = minX; x <= maxX; x++) {
-                    regionChunks.add(createProtoChunk(level, new ChunkPos(x, z)));
-                }
-            }
-
-            // writeRadius controls which chunks accept setBlock — reserve 2 outer rings
-            // as read-only buffer that decoration can query but not write to
-            int writeRadius = side / 2 - 2;
-            WorldGenRegion region = new WorldGenRegion(level, regionChunks, ChunkStatus.FEATURES, writeRadius);
-
-            // 5. Set structure starts + references on all proto chunks
-            if(!starts.isEmpty())
-            {
-                for (ProtoChunk proto : CHUNK_CACHE.values()) {
-                    proto.setAllStarts(starts);
-                    starts.forEach((s, start) ->
-                        proto.addReferenceForStructure(s, start.getChunkPos().toLong()));
-                }
-            }
-
-
-            // 6. Decorate only the requested chunks
-            for (ChunkPos cp : chunksToDecorate) {
-                ProtoChunk centerChunk = CHUNK_CACHE.get(cp);
-                if (centerChunk == null) continue;
-
-                generator.applyBiomeDecoration(region, centerChunk,
-                    level.structureManager().forWorldGenRegion(region));
-                centerChunk.setStatus(ChunkStatus.FEATURES);
-            }
-
-            return true;
-    }
-
-
-    // Convenience overload: regenerate an entire chunk with no bounding box filter.
-    public static boolean regenerateChunk(ProtoChunk chunk, ServerLevel level, ChunkPos pos) {
-        ManagedChunkUtility util = ManagedChunkUtility.getInstance(level);
-        if (util == null) return false;
-        if (!util.isChunkFullyLoaded(pos)) return false;
-
-        BoundingBox fullChunk = new BoundingBox(
-            pos.getMinBlockX(), level.getMinBuildHeight(), pos.getMinBlockZ(),
-            pos.getMaxBlockX(), level.getMaxBuildHeight(), pos.getMaxBlockZ()
-        );
-
-        List<String> localChunks = HBUtil.ChunkUtil.getLocalChunkIds(pos, 8);
-        boolean allLoaded = localChunks.stream().allMatch(util::isChunkFullyLoaded);
-        if (!allLoaded) return false;
-        List<ChunkAccess> chunks = localChunks.stream()
-            .map(id -> util.getManagedChunk(id).getCachedLevelChunk())
-            .collect(Collectors.toList());
-
-
-        return resetTerrain(chunk, level, pos, chunks);
-    }
-
-    private static Map<ChunkPos, ProtoChunk> CHUNK_CACHE = new ConcurrentHashMap<>();
-
-    public static ProtoChunk createProtoChunk(Level level, ChunkPos pos) {
-        if (CHUNK_CACHE.containsKey(pos)) return CHUNK_CACHE.get(pos);
-        try {
-            Registry<Biome> biomeRegistry = level.registryAccess().registryOrThrow(Registries.BIOME);
-            ProtoChunk pc = new ProtoChunk(pos, UpgradeData.EMPTY, level, biomeRegistry, null);
-            CHUNK_CACHE.put(pos, pc);
-            return pc;  // <-- return the newly created chunk
-        } catch (Exception e) {
-            LoggerProject.logError(CLASS_ID + "002", "Failed to create scratch chunk: " + e.getMessage());
-            return null;
-        }
-    }
+    private static Map<ChunkPos, ChunkAccess> CHUNK_CACHE = new HashMap<>();
 
     public static void clearCache(Set<ChunkPos> toClear) {
         CHUNK_CACHE.keySet().removeAll(toClear);
     }
 
+    public static void fillCache(Map<ChunkPos, ChunkAccess> chunks) {
+        CHUNK_CACHE.putAll(chunks);
+    }
+
     public static void copyChunk(ServerLevel level, ChunkPos pos, BoundingBox area,
     List<BlockPos> lootPos) {
-        ProtoChunk proto = CHUNK_CACHE.get(pos);
+        ChunkAccess proto = CHUNK_CACHE.get(pos);
         if (proto == null) return;
 
-        LevelChunk live = level.getChunk(pos.x, pos.z);
+        LevelChunk live = ManagedChunkUtility.getManagedChunk(level, pos).getCachedLevelChunk();
         copySections(proto, live, area);
         live.setUnsaved(true);
         notifyClients(level, live, area);
@@ -249,11 +82,11 @@ public class ChunkRegenerator {
         //save all the lootable entities for players to loot
         lootPos.addAll(proto.getBlockEntitiesPos().stream()
             .filter(area::isInside)
-            .collect(Collectors.toList()));
+            .toList());
     }
 
     // Copies block state data from the scratch ProtoChunk into the live LevelChunk, bounded by region.
-    private static void copySections(ProtoChunk source, LevelChunk target, BoundingBox region) {
+    private static void copySections(ChunkAccess source, LevelChunk target, BoundingBox region) {
         int minSection = target.getMinSection();
         int maxSection = target.getMaxSection();
         Level level = target.getLevel();
@@ -328,13 +161,14 @@ public class ChunkRegenerator {
      * @param pos
      */
     public static void copyLoot(ServerLevel level, BlockPos pos) {
-        ProtoChunk proto = CHUNK_CACHE.get(new ChunkPos(pos));
+        ChunkAccess proto = CHUNK_CACHE.get(new ChunkPos(pos));
         if (proto == null) return;
         BlockEntity oldBe = proto.getBlockEntity(pos);
         BlockEntity newBe = level.getBlockEntity(pos);
         if (oldBe == null || newBe==null) return;
-        CompoundTag itemData = oldBe.saveWithFullMetadata();
-        newBe.load(itemData);
+        net.minecraft.core.HolderLookup.Provider registries = level.registryAccess();
+        CompoundTag itemData = oldBe.saveWithFullMetadata(registries);
+        newBe.loadWithComponents(itemData, registries);
     }
 
     /**
@@ -349,7 +183,7 @@ public class ChunkRegenerator {
         level.getChunkSource().getLightEngine().propagateLightSources(chunk.getPos());
 
         ClientboundForgetLevelChunkPacket forget =
-            new ClientboundForgetLevelChunkPacket(chunk.getPos().x, chunk.getPos().z);
+            new ClientboundForgetLevelChunkPacket(chunk.getPos());
 
         HBUtil.PlayerUtil.getAllPlayers().forEach(player -> {
             player.connection.send(forget);
@@ -360,4 +194,203 @@ public class ChunkRegenerator {
     }
 
 
+    /** SERVER LEVEL COPY BASED WORLD REGEN **/
+
+    private static final String DIM_LEVEL_NAME = "HBStructuresTempGen";
+    private static final long GEN_TIMEOUT_NANOS = 30L * 1_000_000_000L;
+
+    private static ServerLevel DUMMY_LEVEL = null;
+    private static LevelStorageSource.LevelStorageAccess DUMMY_SESSION = null;
+    private static Path DUMMY_TEMP_DIR = null;
+    private static MinecraftServer DUMMY_SERVER = null;
+
+    private static final ChunkProgressListener DUMMY_LISTENER = new ChunkProgressListener() {
+        @Override public void updateSpawnPos(ChunkPos center) { }
+        @Override public void onStatusChange(ChunkPos pos, ChunkStatus status) { }
+        @Override public void start() { }
+        @Override public void stop() { }
+    };
+
+    /**
+     * Simulates terrain gen over the specified area returns a map of chunks
+     */
+    public static Map<ChunkPos, ChunkAccess> regenerateArea(ServerLevel level, Collection<ChunkPos> targets)
+    {
+        if (level == null || targets == null || targets.isEmpty()) return Collections.emptyMap();
+        MinecraftServer server = level.getServer();
+        if (server == null) return Collections.emptyMap();
+
+        ServerLevel dummyLevel = getOrCreateDummyLevel(level, server);
+        if (dummyLevel == null) return Collections.emptyMap();
+
+        try {
+            return regenChunks(level, dummyLevel, targets);
+        }
+        catch (Exception e) {
+            LoggerProject.logError(CLASS_ID + "020",
+                "Scratch level regeneration failed: " + e.getMessage());
+            e.printStackTrace();
+            return Collections.emptyMap();
+        }
+    }
+
+
+
+
+    /**
+     * Creates virtual server level identical to posted level for virtual terrain regen
+     * Necessarily creates and deletes directory as well
+     * Fails if any chunk fails to load - later retries.
+     */
+    private static ServerLevel getOrCreateDummyLevel(ServerLevel level, MinecraftServer server)
+    {
+        if (DUMMY_LEVEL != null && DUMMY_SERVER == server) return DUMMY_LEVEL;
+        if (DUMMY_LEVEL != null) shutdownDummyLevel();
+
+        try {
+            DUMMY_TEMP_DIR = Files.createTempDirectory("HBStructuresWorldGen");
+            LevelStorageSource storage = LevelStorageSource.createDefault(DUMMY_TEMP_DIR);
+            DUMMY_SESSION = storage.createAccess(DIM_LEVEL_NAME);
+
+            PrimaryLevelData overworldData = (PrimaryLevelData) server.getWorldData().overworldData();
+            WorldOptions worldOptions = overworldData.worldGenOptions();
+            long seed = worldOptions.seed();
+
+            LevelStem stem = new LevelStem(
+                level.dimensionTypeRegistration(),
+                level.getChunkSource().getGenerator()
+            );
+
+            DUMMY_LEVEL = new ServerLevel(
+                server,
+                Util.backgroundExecutor(),
+                DUMMY_SESSION,
+                overworldData,
+                level.dimension(),
+                stem,
+                DUMMY_LISTENER,
+                level.isDebug(),
+                seed,
+                List.of(),
+                false,
+                new RandomSequences(seed)
+            );
+            DUMMY_SERVER = server;
+
+            LoggerProject.logInfo(CLASS_ID + "024", "Created scratch generation level at " + DUMMY_TEMP_DIR);
+            return DUMMY_LEVEL;
+        }
+        catch (Exception e) {
+            LoggerProject.logError(CLASS_ID + "025",
+                "Failed to create scratch generation level: " + e.getMessage());
+            e.printStackTrace();
+            shutdownDummyLevel();
+            return null;
+        }
+    }
+
+
+    public static void shutdownDummyLevel()
+    {
+        ServerLevel dummy = DUMMY_LEVEL;
+        LevelStorageSource.LevelStorageAccess session = DUMMY_SESSION;
+        Path dir = DUMMY_TEMP_DIR;
+
+        DUMMY_LEVEL = null;
+        DUMMY_SESSION = null;
+        DUMMY_TEMP_DIR = null;
+        DUMMY_SERVER = null;
+
+        if (dummy != null) {
+            try { dummy.close(); }
+            catch (Exception e) { LoggerProject.logWarning(CLASS_ID + "026",
+                "Failed to close scratch level: " + e.getMessage()); }
+        }
+        if (session != null) {
+            try { session.close(); }
+            catch (Exception e) { LoggerProject.logWarning(CLASS_ID + "027",
+                "Failed to close scratch session: " + e.getMessage()); }
+        }
+        deleteTempDir(dir);
+    }
+
+
+
+    private static Map<ChunkPos, ChunkAccess> regenChunks(ServerLevel realLevel,
+                                                          ServerLevel dummyLevel, Collection<ChunkPos> targets)
+    {
+        List<CompletableFuture<ChunkAccess>> futures = submitChunkLoadTasks(dummyLevel, targets);
+
+        //ServerChunkCache.pollTask() is public and delegates into the private mainThreadProcessor
+        ServerChunkCache source = dummyLevel.getChunkSource();
+        long deadline = System.nanoTime() + GEN_TIMEOUT_NANOS;
+        while (!futures.stream().allMatch(CompletableFuture::isDone))
+        {
+            if (futures.stream().anyMatch(f -> f.isDone() && f.getNow(null)==null)) break;
+            if (System.nanoTime() > deadline) {
+                LoggerProject.logError(CLASS_ID + "023", "Scratch level generation timed out");
+                break;
+            }
+            if (!source.pollTask()) Thread.yield();
+        }
+
+        CHUNK_CACHE.clear();
+        for (CompletableFuture<ChunkAccess> future : futures) {
+            ChunkAccess chunk = future.getNow(null);
+            if (chunk == null) continue;
+            CHUNK_CACHE.put(chunk.getPos(), chunk);
+        }
+
+        return CHUNK_CACHE;
+    }
+
+    private static List<CompletableFuture<ChunkAccess>> submitChunkLoadTasks(ServerLevel scratch,
+        Collection<ChunkPos> targets)
+    {
+        List<CompletableFuture<ChunkAccess>> futures = new ArrayList<>(targets.size());
+        for (ChunkPos cp : targets) {
+            CHUNK_CACHE.put(cp, null);
+            futures.add(scratch.getChunkSource()
+                .getChunkFuture(cp.x, cp.z, ChunkStatus.FEATURES, true)
+                .thenApply(result -> result.orElse(null)));
+        }
+        return futures;
+    }
+
+    public static boolean cacheContains(ChunkAccess me) {
+        return CHUNK_CACHE.containsKey(me.getPos());
+    }
+
+
+    //region files may still be handle-locked on windows, so retry before giving up
+    private static void deleteTempDir(Path dir) {
+        if (dir == null) return;
+        for (int attempt = 0; attempt < 5; attempt++) {
+            if (!Files.exists(dir)) return;
+            try (java.util.stream.Stream<Path> walk = Files.walk(dir)) {
+                walk.sorted(Comparator.reverseOrder()).forEach(p -> {
+                    try { Files.deleteIfExists(p); } catch (Exception ignored) { }
+                });
+            } catch (Exception ignored) { }
+            if (!Files.exists(dir)) return;
+            try { Thread.sleep(100L * (attempt + 1)); }
+            catch (InterruptedException ie) { Thread.currentThread().interrupt(); break; }
+        }
+        if (Files.exists(dir)) {
+            dir.toFile().deleteOnExit();
+            LoggerProject.logWarning(CLASS_ID + "022",
+                "Could not delete scratch level dir, deferred to JVM exit: " + dir);
+        }
+    }
+
+
+    public static void finish() {
+        shutdownDummyLevel();
+        clearCache(CHUNK_CACHE.keySet());
+    }
+
+
+    public static Level getVirtualLevel() {
+        return DUMMY_LEVEL;
+    }
 }
